Install flake8 before trying to flake8 the generated code

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
                 curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/master/ci-support.sh
                 . ./ci-support.sh
                 build_py_project_in_conda_env
+                python -m pip install flake8 pep8-naming flake8-quotes
                 python .ci/generate-test-mech.py
                 flake8 --extend-ignore E501,Q000 pyrometheus
 
