--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,8 @@ jobs:
                 build_py_project_in_conda_env
                 python -m pip install flake8 pep8-naming flake8-quotes
                 python .ci/generate-test-mech.py
-                flake8 --extend-ignore E501,Q000 pyrometheus
-                
+                flake8 --extend-ignore E501,Q000 *_mech.py
+
     pytest:
         name: Pytest Conda Py
         runs-on: ubuntu-latest
