--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,4 +78,39 @@ jobs:
                 python .ci/generate-example-mech.py test/mechs/sanDiego.cti pyrometheus/thermochem_example.py
                 build_docs
 
+    downstream_tests:
+        strategy:
+            matrix:
+                downstream_project: [mirgecom]
+        name: Tests for downstream project ${{ matrix.downstream_project }}
+        runs-on: ubuntu-latest
+        steps:
+        -   uses: actions/checkout@v2
+        -   name: "Main Script"
+            env:
+                DOWNSTREAM_PROJECT: ${{ matrix.downstream_project }}
+            run: |
+                git clone "https://github.com/illinois-ceesd/$DOWNSTREAM_PROJECT.git"
+                cd "$DOWNSTREAM_PROJECT"
+                echo "*** $DOWNSTREAM_PROJECT version: $(git rev-parse --short HEAD)"
+                sed -i "/egg=pyrometheus/ c git+file://$(readlink -f ..)#egg=pyrometheus" requirements.txt
+                # Avoid slow or complicated tests in downstream projects
+                export PYTEST_ADDOPTS="-k 'not (slowtest or octave or mpi)'"
+                if test "$DOWNSTREAM_PROJECT" = "mirgecom"; then
+                    # can't turn off MPI in mirgecom
+                    sudo apt-get update
+                    sudo apt-get install openmpi-bin libopenmpi-dev
+                    export CONDA_ENVIRONMENT=conda-env.yml
+                else
+                    sed -i "/mpi4py/ d" requirements.txt
+                    export CONDA_ENVIRONMENT=.test-conda-env-py3.yml
+
+                fi
+                curl -L -O -k https://gitlab.tiker.net/inducer/ci-support/raw/master/ci-support.sh
+                . ./ci-support.sh
+                build_py_project_in_conda_env
+
+                export CISUPPORT_PARALLEL_PYTEST=no
+                test_py_project
+
 # vim: sw=4
