--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,8 @@ jobs:
         -   uses: actions/checkout@v2
         -   name: "Main Script"
             run: |
-                CONDA_ENVIRONMENT=.test-conda-env-py3.yml
-                curl -L -O https://gitlab.tiker.net/inducer/ci-support/raw/main/ci-support.sh
-                . ./ci-support.sh
+                curl -L -O https://tiker.net/ci-support-v0
+                . ./ci-support-v0
                 build_py_project_in_conda_env
                 python -m pip install flake8 pep8-naming flake8-quotes flake8-bugbear
                 python .ci/generate-test-mech.py
@@ -45,8 +44,10 @@ jobs:
         -   name: "Main Script"
             run: |
                 CONDA_ENVIRONMENT=.test-conda-env-py3.yml
-                curl -L -O https://gitlab.tiker.net/inducer/ci-support/raw/main/build-and-test-py-project-within-miniconda.sh
-                . ./build-and-test-py-project-within-miniconda.sh
+                curl -L -O https://tiker.net/ci-support-v0
+                . ./ci-support-v0
+                build_py_project_in_conda_env
+                test_py_project
 
     # examples3:
     #     name: Examples Conda Py
@@ -55,10 +56,10 @@ jobs:
     #     -   uses: actions/checkout@v2
     #     -   name: "Main Script"
     #         run: |
-    #             CONDA_ENVIRONMENT=.test-conda-env-py3.yml
-    #             USE_CONDA_BUILD=1
-    #             curl -L -O https://gitlab.tiker.net/inducer/ci-support/raw/main/build-py-project-and-run-examples.sh
-    #             . ./build-py-project-and-run-examples.sh
+    #            curl -L -O https://tiker.net/ci-support-v0
+    #            . ./ci-support-v0
+    #            build_py_project_in_conda_env
+    #            run_examples
 
     docs:
         name: Documentation
@@ -71,9 +72,8 @@ jobs:
                 python-version: '3.x'
         -   name: "Main Script"
             run: |
-                CONDA_ENVIRONMENT=.test-conda-env-py3.yml
-                curl -L -O https://gitlab.tiker.net/inducer/ci-support/raw/main/ci-support.sh
-                . ci-support.sh
+                curl -L -O https://tiker.net/ci-support-v0
+                . ci-support-v0
                 build_py_project_in_conda_env
                 python .ci/generate-example-mech.py test/mechs/sanDiego.cti pyrometheus/thermochem_example.py
                 build_docs
