Upgrade to Cantera 2.6 with yaml input files (#51)
* Upgraded to yaml mech files with corresponding template & EGF changes

* Broke some long lines in chem_expr.py

* Well this is never going to work without the yaml files -_-

* Fixed mech names (all lower case now) in test_codegen.py

* Upgraded Troe Falloff to be compatible with Ct 2.6

* Updated flake-8 test to use yaml files

* Modified doc build to use yaml (ugh)

* Renamed ci ct yaml file (note: all lower case from now on)

* Adding backward compatibility to cti files

* Removing some whitespace in chem_expr and python template

* Removed move whitespace in chem_expr

* Fixing FIXMEs (to all caps).

Co-authored-by: Andreas Klöckner <inform@tiker.net>

* Improved on Falloff deprecattion warnings, coalesced indices and reactions into single list

* Removing white spaces, other style errors

* Removing one extra trailing whitespace

* Delete CTI mechanisms except UIUC, add test for CTI reading

Co-authored-by: Esteban <ec1287@princeton.edu>
Co-authored-by: Esteban Cisneros Garibay <ec1287@tigercpu.princeton.edu>
Co-authored-by: Andreas Klöckner <inform@tiker.net>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,7 +85,7 @@ jobs:
                 curl -L -O https://tiker.net/ci-support-v0
                 . ci-support-v0
                 build_py_project_in_conda_env
-                python .ci/generate-example-mech.py test/mechs/sanDiego.cti pyrometheus/thermochem_example.py
+                python .ci/generate-example-mech.py test/mechs/sandiego.yaml pyrometheus/thermochem_example.py
                 build_docs
 
     downstream_tests:
