--- a/.test-conda-env-py3.yml
+++ b/.test-conda-env-py3.yml
@@ -6,5 +6,7 @@ channels:
 dependencies:
 - python=3
 - cantera
-- pip
+- pip:
+    - git+https://github.com/inducer/arraycontext.git@numpy-rebased
+
 - jax
