Copy generated mechanism into place during readthedocs build

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,3 +7,8 @@ python:
   install:
     - method: pip
       path: .
+
+build:
+    jobs:
+        pre_build:
+            python .ci/generate-example-mech.py test/mechs/sandiego.yaml pyrometheus/thermochem_example.py
