Try fixing rtd yaml config

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,5 +10,5 @@ python:
 
 build:
     jobs:
-        pre_build:
+        pre_build: |
             python .ci/generate-example-mech.py test/mechs/sandiego.yaml pyrometheus/thermochem_example.py
