Try fixing rtd yaml config^3

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,6 +9,9 @@ python:
       path: .
 
 build:
+    os: ubuntu-22.04
+    tools:
+        python: "3"
     jobs:
         pre_build:
             - python .ci/generate-example-mech.py test/mechs/sandiego.yaml pyrometheus/thermochem_example.py
