--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -11,7 +11,7 @@ python:
 build:
     os: ubuntu-22.04
     tools:
-        python
+        python: "miniconda3-4.7"
     jobs:
         pre_build:
             - python .ci/generate-example-mech.py test/mechs/sandiego.yaml pyrometheus/thermochem_example.py
