--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -14,4 +14,4 @@ build:
         python: "miniconda3-4.7"
     jobs:
         pre_build:
-            - python .ci/generate-example-mech.py test/mechs/sandiego.yaml pyrometheus/thermochem_example.py && pip install -e .
+            - /home/docs/checkouts/readthedocs.org/user_builds/pyrometheus/conda/latest/bin/python .ci/generate-example-mech.py test/mechs/sandiego.yaml pyrometheus/thermochem_example.py && ls pyrometheus
