--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -18,4 +18,4 @@ build:
   jobs:
     pre_build:
       # Generate the thermochem example and reinstall pyrometheus as editable
-      - /home/docs/checkouts/readthedocs.org/user_builds/pyrometheus-test/conda/fix-rtd/bin/python .ci/generate-example-mech.py test/mechs/sandiego.yaml pyrometheus/thermochem_example.py && /home/docs/checkouts/readthedocs.org/user_builds/pyrometheus-test/conda/fix-rtd/bin/python -m pip install --no-cache-dir --editable .
+      - $PYTHON .ci/generate-example-mech.py test/mechs/sandiego.yaml pyrometheus/thermochem_example.py && $PYTHON -m pip install --no-cache-dir --editable .
