--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,8 +1,5 @@
 version: 2
 
-conda:
-  environment: .rtd-env-py3.yml
-
 python:
   install:
     - method: pip
@@ -14,7 +11,7 @@ sphinx:
 build:
   os: ubuntu-22.04
   tools:
-    python: "miniconda3-4.7"
+    python: "3.11"
   jobs:
     pre_build:
       # Generate the thermochem example and reinstall pyrometheus as editable
