--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,6 +4,8 @@ python:
   install:
     - method: pip
       path: .
+      extra_requirements:
+        - requirements_doc.txt
 
 sphinx:
   fail_on_warning: true
