--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,10 +2,9 @@ version: 2
 
 python:
   install:
+    - requirements: requirements_doc.txt
     - method: pip
       path: .
-      extra_requirements:
-        - requirements_doc.txt
 
 sphinx:
   fail_on_warning: true
