--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -18,4 +18,4 @@ build:
       - pip install sphinx-math-dollar sphinx-copybutton furo
     pre_build:
       # Generate the thermochem example and reinstall pyrometheus as editable
-      - . bin/activate && python .ci/generate-example-mech.py test/mechs/sandiego.yaml pyrometheus/thermochem_example.py && python -m pip install --no-cache-dir --editable .
+      - python .ci/generate-example-mech.py test/mechs/sandiego.yaml pyrometheus/thermochem_example.py && python -m pip install --no-cache-dir --editable .
