--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -15,6 +15,6 @@ build:
   jobs:
     post_install:
       - pip install sphinx-math-dollar sphinx-copybutton furo
-    pre_build:
       # Generate the thermochem example and reinstall pyrometheus as editable
-      - python .ci/generate-example-mech.py test/mechs/sandiego.yaml pyrometheus/thermochem_example.py && python -m pip install --no-cache-dir --editable .
+      - python .ci/generate-example-mech.py test/mechs/sandiego.yaml pyrometheus/thermochem_example.py
+      - python -m pip install --editable .
