--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -15,6 +15,7 @@ build:
   jobs:
     post_install:
       - pip install sphinx-math-dollar sphinx-copybutton furo
-      # Generate the thermochem example and reinstall pyrometheus as editable
+      # Generate the thermochem example
       - python .ci/generate-example-mech.py test/mechs/sandiego.yaml pyrometheus/thermochem_example.py
+      # Reinstall pyrometheus as editable to take into account the generated file
       - python -m pip install --editable .
