--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,6 +100,7 @@ jobs:
             env:
                 DOWNSTREAM_PROJECT: ${{ matrix.downstream_project }}
             run: |
+                set -x
                 curl -L -O https://tiker.net/ci-support-v0
                 . ./ci-support-v0
 
@@ -113,6 +114,9 @@ jobs:
                     # can't turn off MPI in mirgecom
                     export CONDA_ENVIRONMENT=conda-env.yml
                     echo "- mpi4py" >> "$CONDA_ENVIRONMENT"
+
+                    # Make sure not to reinstall mpi4py
+                    sed -i "/mpi4py/ d" requirements.txt
                 else
                     sed -i "/mpi4py/ d" requirements.txt
                     export CONDA_ENVIRONMENT=.test-conda-env-py3.yml
