--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 ignore = E126,E127,E128,E123,E226,E241,E242,E265,E402,W503,E731
 max-line-length=85
-exclude=pytools/arithmetic_container.py,pytools/decorator.py
+exclude=pytools/arithmetic_container.py,pytools/decorator.py,build
 
 inline-quotes = "
 docstring-quotes = "
