Add C++ & Fortran Backends (#87)
* Add generators for C++ and Fortran

Corresponds to b92f8e9f5b1fdf8c435317f0362ce29fa0a63346
in https://github.com/pyrometheus/pyrometheus/pull/36.

Co-authored-by: Andreas Kloeckner <inform@tiker.net>

* Fortran: species names and indices

* Fortran: element names

* Added NumPy grid functionality

* Fixed Python tests, added C++ tests (separate files though)

* Initial commit: Updates template and chem expressions for compatibility with the new Cantera release

* Addressing Flake8 issues (double quotes etc)

* Towards bwd cantera 2.6 compat: three-body rxns

* Forgot a  in the template for get_concentrations

* Removing support for 2.6

* Testing whether cantera version in setup.py leads to test failures

* Test cantera-3 specific mirgecom branch

* Modify Fortran codegen to be compatible with Cantera 3

* Fix syntax in chem_expr module.

* Remove unmatched %endif from template.

* Correct template loop over falloff_reactions.

* Remove instance checks against deprecated ct.FalloffReaction

* Try to locate template error, potentially in num_falloff.

* Fix template error, culprit was rage(...) for range(...)

* fortran90: Add !$acc directives

* Complete & fix the cpp/fortran/python backends

* Backend-agnostic test suite using Python bindings

* Test all backends in CI

---------

Co-authored-by: ecisneros8 <csnrsgr2@illinois.edu>
Co-authored-by: Andreas Kloeckner <inform@tiker.net>
Co-authored-by: Esteban <ec1287@princeton.edu>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,6 @@
 name: CI
 on:
     push:
-        branches:
-        - main
     pull_request:
     schedule:
         - cron:  '17 3 * * 0'
@@ -57,7 +55,10 @@ jobs:
                 curl -L -O https://tiker.net/ci-support-v0
                 . ./ci-support-v0
                 build_py_project_in_conda_env
-                test_py_project
+
+                cmake -S test -B build
+                cmake --build build --parallel $(nproc)
+                ctest --test-dir build
 
     # examples3:
     #     name: Examples Conda Py
@@ -87,5 +88,3 @@ jobs:
                 build_py_project_in_conda_env
                 python .ci/generate-example-mech.py test/mechs/sandiego.yaml pyrometheus/thermochem_example.py
                 build_docs
-
-# vim: sw=4
