--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,17 +1,19 @@
-cmake_minimum_required(VERSION 3.26 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.20 FATAL_ERROR)
 
 project(Pyrometheus)
 
-option(TEST_python    "Test the Python  Backend." ON)
-option(TEST_cpp       "Test the C++     Backend." ON)
-option(TEST_fortran90 "Test the Fortran Backend." ON)
+option(TEST_python  "Test the Python  Backend." ON)
+option(TEST_cpp     "Test the C++     Backend." ON)
+option(TEST_fortran "Test the Fortran Backend." ON)
 
 set(TEST_MECHANISMS "uiuc;sandiego;uconn32;gri30;hong")
+
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 enable_testing()
 
 find_package(Python3 COMPONENTS Interpreter Development NumPy REQUIRED)
-find_program(PYTEST_EXE pytest REQUIRED)
 
 file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/mechs")
 
@@ -27,9 +29,10 @@ function (pyro_generate_backend_impl)
                 "${PYRO_DIR}/__init__.py"
                 "${PYRO_DIR}/codegen/__init__.py"
                 "${PYRO_DIR}/codegen/${ARGS_BACKEND}.py"
-        COMMAND "${Python3_EXECUTABLE}" "${CMAKE_SOURCE_DIR}/codegen.py"
-            --mech "${ARGS_MECHANISM}"  --backend "${ARGS_BACKEND}"
-            --name "${ARGS_NAME}"       --output  "${ARGS_OUTPUT}"   
+        COMMAND "${Python3_EXECUTABLE}" -m pyrometheus
+            --mech "${ARGS_MECHANISM}" --lang   "${ARGS_BACKEND}"
+            --name "${ARGS_NAME}"      --output "${ARGS_OUTPUT}"
+            --phase "gas"
     )
 endfunction()
 
@@ -40,8 +43,9 @@ function (pyro_generate_test)
     add_test(
         NAME    pyro_${ARGS_BACKEND}
         COMMAND ${CMAKE_COMMAND} -E env "PYTHONPATH=${CMAKE_BINARY_DIR}"
-            "${PYTEST_EXE}" "${CMAKE_SOURCE_DIR}/test.py"
-                            --backend ${ARGS_BACKEND}
+            "${Python3_EXECUTABLE}" -m pytest
+                "${CMAKE_SOURCE_DIR}/test.py"
+                --backend ${ARGS_BACKEND}
     )
 endfunction()
 
@@ -78,7 +82,7 @@ if (TEST_cpp)
         set(binding_out "${CMAKE_BINARY_DIR}/binding_${mechanism}.cxx")
 
         pyro_generate_backend_impl(
-            MECHANISM "${mech_in}"    BACKEND cpp
+            MECHANISM "${mech_in}"    BACKEND "cpp"
             NAME      "${mechanism}"  OUTPUT  "${header_out}"
         )
 
@@ -95,7 +99,7 @@ if (TEST_cpp)
 endif()
 
 
-if (TEST_fortran90)
+if (TEST_fortran)
     enable_language(Fortran)
 
     execute_process(COMMAND "${Python3_EXECUTABLE}"
@@ -103,17 +107,17 @@ if (TEST_fortran90)
         OUTPUT_VARIABLE F2PY_INCLUDE_DIR OUTPUT_STRIP_TRAILING_WHITESPACE
     )
 
-    add_custom_target(pyro_fortran90 ALL)
+    add_custom_target(pyro_fortran ALL)
 
     foreach (mechanism ${TEST_MECHANISMS})
-        set(lib_name   "libpyro_fortran90_${mechanism}")
+        set(lib_name   "libpyro_fortran_${mechanism}")
         set(mech_in    "${CMAKE_SOURCE_DIR}/mechs/${mechanism}.yaml")
         set(module_out "${CMAKE_BINARY_DIR}/mechs/${mechanism}.f90")
         set(f2py_out_c "${CMAKE_BINARY_DIR}/${lib_name}module.c")
         set(f2py_out_f "${CMAKE_BINARY_DIR}/${lib_name}-f2pywrappers2.f90")
 
         pyro_generate_backend_impl(
-            MECHANISM "${mech_in}"    BACKEND fortran90
+            MECHANISM "${mech_in}"    BACKEND fortran
             NAME      "${lib_name}"   OUTPUT  "${module_out}"
         )
 
@@ -125,19 +129,19 @@ if (TEST_fortran90)
             DEPENDS ${module_out}
         )
 
-        add_library(pyro_fortran90_${mechanism} MODULE
+        add_library(pyro_fortran_${mechanism} MODULE
             "${f2py_out_c}" "${f2py_out_f}"
             "${F2PY_INCLUDE_DIR}/fortranobject.c" "${module_out}")
-        target_link_libraries(pyro_fortran90_${mechanism} PRIVATE Python3::NumPy Python3::Module)
-        target_compile_definitions(pyro_fortran90_${mechanism} PRIVATE "PYROMETHEUS_CALLER_INDEXING=1")
-        target_include_directories(pyro_fortran90_${mechanism} PRIVATE "${F2PY_INCLUDE_DIR}")
+        target_link_libraries(pyro_fortran_${mechanism} PRIVATE Python3::NumPy Python3::Module)
+        target_compile_definitions(pyro_fortran_${mechanism} PRIVATE "PYROMETHEUS_CALLER_INDEXING=1")
+        target_include_directories(pyro_fortran_${mechanism} PRIVATE "${F2PY_INCLUDE_DIR}")
 
-        set_target_properties(pyro_fortran90_${mechanism} PROPERTIES
+        set_target_properties(pyro_fortran_${mechanism} PROPERTIES
             Fortran_PREPROCESS ON
         )
 
-        add_dependencies(pyro_fortran90 pyro_fortran90_${mechanism})
+        add_dependencies(pyro_fortran pyro_fortran_${mechanism})
     endforeach()
 
-    pyro_generate_test(BACKEND fortran90)
+    pyro_generate_test(BACKEND fortran)
 endif()
