--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ classifiers = [
     "Topic :: Software Development :: Code Generators"
 ]
 dependencies = [
-    "cantera",
+    "cantera==3.0.1",
     "pymbolic",
     "mako",
 ]
