--- a/.github/workflows/mfc.yml
+++ b/.github/workflows/mfc.yml
@@ -11,7 +11,6 @@ jobs:
     strategy:
       matrix:
         mpi:         ['mpi','no-mpi']
-        precision:   ['single','no-single']
 
       fail-fast: false
     continue-on-error: true
@@ -35,4 +34,4 @@ jobs:
 
       - name: Test
         run:  |
-          /bin/bash mfc.sh test -o Chemistry --max-attempts 3 -j $(nproc) --test-all --${{ matrix.mpi }} --${{ matrix.precision}}
+          /bin/bash mfc.sh test -o Chemistry --max-attempts 3 -j $(nproc) --test-all --${{ matrix.mpi }}
