--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
         - uses: actions/checkout@v3
         - uses: actions/setup-python@v4
           with:
-            python-version: '3.x'
+            python-version: '3.13'
         - name: Flake8
           run:  python3 -m pip install .[dev] && flake8 --exclude examples
 
@@ -24,7 +24,7 @@ jobs:
         - uses: actions/checkout@v3
         - uses: actions/setup-python@v4
           with:
-            python-version: '3.x'
+            python-version: '3.13'
         - name: Flake8
           run: |
             python3 -m pip install .[dev]
@@ -63,7 +63,7 @@ jobs:
         - uses: actions/checkout@v3
         - uses: actions/setup-python@v4
           with:
-            python-version: '3.x'
+            python-version: '3.13'
         - name: 'Build Docs'
           run: |
             python3 -m pip install -e .[docs]
