--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         name: Pytest Conda Py${{ matrix.python-version }}
         strategy:
             matrix:
-                python-version: ["3.12", "3.13", "3.14"]
+                python-version: ["3.9", "3.11", "3.12", "3.13", "3.14"]
         runs-on: ubuntu-latest
         env:
             PYTHON_VERSION: ${{ matrix.python-version }}
